[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]
[ext_resource path="res://res/bgMainmenu.png" type="Texture" id=2]
[ext_resource path="res://Themes/Default.tres" type="Theme" id=3]

[node name="Settings" type="Node" index="0"]

script = ExtResource( 1 )

[node name="bgMainmenu" type="Sprite" parent="." index="0"]

position = Vector2( 640.619, 360.854 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.0
margin_top = -38.5
margin_right = 235.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 2
alignment = 1
_sections_unfolded = [ "Rect" ]

[node name="btnResetStats" type="Button" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 470.0
margin_bottom = 69.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
theme = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reset Stats"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags", "Theme" ]

[node name="btnBack" type="Button" parent="." index="2"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -499.0
margin_top = 31.0
margin_right = -29.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
theme = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="btnBack" to="." method="_on_btnBack_pressed"]


